Adjusted affirmations select button. Was outside bounds on multiple screens. Also added the loop icon in nav bar. Ready to merge main.

--- a/LoopMultiviewTest/Base.lproj/Main.storyboard
+++ b/LoopMultiviewTest/Base.lproj/Main.storyboard
@@ -783,7 +783,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VBS-3b-REN">
                                         <rect key="frame" x="0.0" y="0.0" width="350" height="170"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plain" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PN3-Vg-Gaf">
+                                            <label opaque="NO" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plain" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PN3-Vg-Gaf">
                                                 <rect key="frame" x="11" y="16" width="328" height="74"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
@@ -791,7 +791,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="POM-Gb-XrP">
-                                                <rect key="frame" x="254.33333333333329" y="120" width="64.666666666666657" height="31"/>
+                                                <rect key="frame" x="254.33333333333329" y="105" width="64.666666666666657" height="31"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="Select">
@@ -810,7 +810,7 @@
                                             <constraint firstItem="POM-Gb-XrP" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="VBS-3b-REN" secondAttribute="leading" constant="20" symbolic="YES" id="LaX-fY-uKo"/>
                                             <constraint firstAttribute="trailing" secondItem="POM-Gb-XrP" secondAttribute="trailing" constant="31" id="T0s-cd-Wpm"/>
                                             <constraint firstItem="PN3-Vg-Gaf" firstAttribute="centerX" secondItem="VBS-3b-REN" secondAttribute="centerX" id="Zae-ll-1zX"/>
-                                            <constraint firstItem="POM-Gb-XrP" firstAttribute="top" secondItem="PN3-Vg-Gaf" secondAttribute="bottom" constant="30" id="eJH-Lb-3pb"/>
+                                            <constraint firstItem="POM-Gb-XrP" firstAttribute="top" secondItem="PN3-Vg-Gaf" secondAttribute="bottom" constant="15" id="eJH-Lb-3pb"/>
                                             <constraint firstItem="PN3-Vg-Gaf" firstAttribute="leading" secondItem="VBS-3b-REN" secondAttribute="leading" constant="11" id="h0i-o0-cyP"/>
                                             <constraint firstItem="PN3-Vg-Gaf" firstAttribute="top" secondItem="VBS-3b-REN" secondAttribute="top" constant="16" id="wXE-j9-HsN"/>
                                         </constraints>
@@ -819,17 +819,14 @@
                                         <rect key="frame" x="0.0" y="189.99999999999994" width="350" height="170"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.84999999999999998" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plain" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ntg-od-FHN">
-                                                <rect key="frame" x="11" y="15.333333333333371" width="328" height="74"/>
+                                                <rect key="frame" x="11" y="16" width="328" height="74"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="height" constant="74" id="UUL-ZZ-hti"/>
-                                                </constraints>
                                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uwd-UI-UPM">
-                                                <rect key="frame" x="254.33333333333329" y="114.33333333333337" width="64.666666666666657" height="31"/>
+                                                <rect key="frame" x="254.33333333333329" y="105" width="64.666666666666657" height="31"/>
                                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <state key="normal" title="Button"/>
                                                 <buttonConfiguration key="configuration" style="filled" title="Select">
@@ -844,12 +841,13 @@
                                         </subviews>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
-                                            <constraint firstItem="Uwd-UI-UPM" firstAttribute="top" secondItem="Ntg-od-FHN" secondAttribute="bottom" constant="25" id="2B9-fa-0ZD"/>
+                                            <constraint firstItem="Ntg-od-FHN" firstAttribute="centerX" secondItem="ZNZ-aA-2ue" secondAttribute="centerX" id="FCq-gg-M92"/>
                                             <constraint firstAttribute="trailing" secondItem="Uwd-UI-UPM" secondAttribute="trailing" constant="31" id="Gkc-ce-GNM"/>
-                                            <constraint firstItem="Ntg-od-FHN" firstAttribute="leading" secondItem="ZNZ-aA-2ue" secondAttribute="leading" constant="11" id="MVJ-G8-BVW"/>
+                                            <constraint firstItem="Ntg-od-FHN" firstAttribute="top" secondItem="ZNZ-aA-2ue" secondAttribute="top" constant="16" id="QNr-xh-5SR"/>
                                             <constraint firstItem="Uwd-UI-UPM" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ZNZ-aA-2ue" secondAttribute="leading" constant="20" symbolic="YES" id="Sni-W5-keq"/>
-                                            <constraint firstItem="Ntg-od-FHN" firstAttribute="centerX" secondItem="ZNZ-aA-2ue" secondAttribute="centerX" id="h9e-yT-pEw"/>
-                                            <constraint firstItem="Ntg-od-FHN" firstAttribute="top" secondItem="ZNZ-aA-2ue" secondAttribute="top" constant="15.5" id="iAg-r8-hRO"/>
+                                            <constraint firstItem="Ntg-od-FHN" firstAttribute="leading" secondItem="ZNZ-aA-2ue" secondAttribute="leading" constant="11" id="bRK-Vk-5iw"/>
+                                            <constraint firstItem="Uwd-UI-UPM" firstAttribute="top" secondItem="Ntg-od-FHN" secondAttribute="bottom" constant="15" id="sa8-im-wUC"/>
+                                            <constraint firstItem="Ntg-od-FHN" firstAttribute="centerY" secondItem="ZNZ-aA-2ue" secondAttribute="centerY" constant="-32" id="z96-58-bHv"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -895,7 +893,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jls-XX-3wD" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2747.826086956522" y="97.767857142857139"/>
+            <point key="canvasLocation" x="2747.6923076923076" y="97.393364928909946"/>
         </scene>
         <!--Hypno Loop-->
         <scene sceneID="VwE-3x-AB1">
